--- a/CSharp-Technology-FUNDAMENTALS/WebApp/Calculator/Views/Home/Numbers.cshtml
+++ b/CSharp-Technology-FUNDAMENTALS/WebApp/Calculator/Views/Home/Numbers.cshtml
@@ -3,7 +3,7 @@
 <ul>
 	<form method = "POST">
 		<input type = "text" placeholder ="New number" name = "number"/>
-		<input type = "submit" />		
+		<input type = "submit" value = "Sumbmit"/>		
 	</form>
 	@for(int i = 1; i<=ViewBag.NumbersRange; i++) 
 	{
