--- a/CSharp-Technology-FUNDAMENTALS/WebApp/Calculator/Views/Shared/_Layout.cshtml
+++ b/CSharp-Technology-FUNDAMENTALS/WebApp/Calculator/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Numbers">Numbers</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Calculator">Calculator</a>
+                        </li>
                     </ul>
                 </div>
             </div>
