--- a/CSharp-Technology-FUNDAMENTALS/WebApp/Calculator/Views/Home/Calculator.cshtml
+++ b/CSharp-Technology-FUNDAMENTALS/WebApp/Calculator/Views/Home/Calculator.cshtml
@@ -1,1 +1,7 @@
 ﻿<h1>This is a Web Calculator</h1>
+<form method = "POST">
+		<input type = "number" placeholder ="Enter number" name = "firstNumber"/>
+		<input type = "text" placeholder ="Enter operation(action)" name = "operation"/>
+		<input type = "number" placeholder ="Enter number" name = "secondNumber"/>
+		<input type = "submit" value = "Submit"/>		
+	</form>
