submitting the calculator actions and removed " from result
There was a " mistake in the Calculator.csshtml file

--- a/CSharp-Technology-FUNDAMENTALS/WebApp/Calculator/Views/Home/Calculator.cshtml
+++ b/CSharp-Technology-FUNDAMENTALS/WebApp/Calculator/Views/Home/Calculator.cshtml
@@ -5,3 +5,4 @@
 		<input type = "number" placeholder ="Enter number" name = "secondNumber"/>
 		<input type = "submit" value = "Submit"/>		
 	</form>
+	<h3 class = "text-danger">Result:@ViewBag.Result </h3>
