--- a/HTML-And-CSS/03.CSS-&-Typography/03.Styling-Tables/styles.css
+++ b/HTML-And-CSS/03.CSS-&-Typography/03.Styling-Tables/styles.css
@@ -4,13 +4,13 @@ body{
     font-family: Montserrat, sans-serif;
     padding: 16px;
 }
-
 th{
     background-color: lightblue;
 }
+
 th, td{
-    Width: 144px;
-    Height: 32px;
-    border: 1px solid#ccc;
+    width: 144px;
+    height: 32px;
+    border: 1px solid #ccc;
     padding-left: 5px;
 }
