--- a/HTML-And-CSS/04.Position-Аnd-Grid/08_Jewellery-Website/styles.css
+++ b/HTML-And-CSS/04.Position-Аnd-Grid/08_Jewellery-Website/styles.css
@@ -1,1 +1,23 @@
-/* TODO: style the html */
+section{
+    position: absolute;
+    top: 250px;
+    left: 180px;
+}
+ h3{
+    font-size: 16px;
+    margin: 0px
+ }
+ 
+ span{
+    padding-left: 3px;
+    color: gray;
+    font-size: 14px;
+ }
+
+ div{
+    position: relative;
+    bottom: 50px;
+    left: 8px;
+ }
+ 
+ 
