--- a/HTML-And-CSS/04.CSS-Box-Model/04.Article/styles.css
+++ b/HTML-And-CSS/04.CSS-Box-Model/04.Article/styles.css
@@ -1,1 +1,16 @@
-/* TODO: style the html */
+main{
+    width: 900px;
+    height: 140px;
+}
+img{
+border-right: 1px solid #d1d1d1;
+margin-right:19px;
+padding-right: 19px;
+float: left;
+}
+p{
+    font-size: 20px;
+    line-height: 30px;
+    color:#2e2e2e;
+    text-align: justify;
+}
