--- a/HTML-And-CSS/04.CSS-Box-Model/07.Make-Your-Own-Website/styles.css
+++ b/HTML-And-CSS/04.CSS-Box-Model/07.Make-Your-Own-Website/styles.css
@@ -1,1 +1,18 @@
-/* TODO: style the html */
+div{ 
+    width: 280px;
+    display:inline-block;
+    padding: 16px;
+    padding-left: 32px;
+    margin-top: 20px;
+    background-color: #0A2C48;
+    color: #fff;
+    border-radius: 4px;
+    }
+
+.div:hover{
+    background-color: #2A4C68;
+}
+p{
+    color: #c9d6ff;
+    font-size: 18px;
+}
