--- a/HTML-And-CSS/07.MediaQueries/02.Responsive-Top-Menu/style.css
+++ b/HTML-And-CSS/07.MediaQueries/02.Responsive-Top-Menu/style.css
@@ -1,93 +1,90 @@
-*{
-    box-sizing: border-box;
-}
-header nav{
-    grid-area: nav;
-    display: inline-block;
-    vertical-align: middle;
-    margin-top: 8px;
-}
-header nav ul{
-    display: flex;
-    list-style-type: none;
-    gap: 50px;
-}
-header nav li{
-    list-style: none;
-    display: inline;
-}
-header nav ul li a{
-    text-decoration: none;
-    color: rgb(53, 100, 153);
-    padding: 5px 15px;
-}
-body{
-    display: grid;
-    grid-template-areas: 
-    "header header header header"
-    "aside main main main"
-    "footer footer footer footer";
-    gap: 10px;
-}
-header{
-    grid-area: header;
-    display: flex;
-	justify-content: space-between;
-}
-aside{
-    grid-area: aside;
-}
-main{
-    grid-area: main;
-}
-footer{
-    grid-area: footer;
-}
-header, aside, main, footer {
-    border-radius: 3px;
-    background-color: rgb(181, 216, 255);
-    padding: 5px 10px;
+body {
+	display: grid;
+	grid-template-areas:
+		'header header header header header'
+		'aside main main main main'
+		'footer footer footer footer footer';
+	gap: 15px;
 }
 
-header h1{
-    display: inline-block;
-    vertical-align: middle;
+header,
+main,
+footer,
+aside {
+	background-color: #b5d8ff;
+	border-radius: 10px;
+	padding: 10px;
 }
 
-aside ul{
-    list-style: none;
-    margin: 0px;
-    padding: 5px;
+aside > ul {
+	list-style-type: none;
 }
 
-aside ul li a{
-    display: block;
-    padding: 5px 0px;
-    color: rgb(86, 40, 129);
-    text-decoration: none;
+ul > li > a {
+	text-decoration: none;
 }
 
-main ul li a{
-    text-decoration: none;
-    color: black;
+header {
+	grid-area: header;
+	display: grid;
+	grid-template-areas: 'title nav nav nav nav';
 }
-@media (max-width: 500px){
-    body{
-    grid-template-areas: 
-    "header header"
-    "aside aside"
-    "main main"
-    "footer footer";
+
+header > h1 {
+	grid-area: title;
 }
-header nav ul li a{
-    display: block;
-    padding-left: 5px;
+
+main {
+	grid-area: main;
 }
-header{
-    flex-direction: column;
+
+aside {
+	grid-area: aside;
+	padding-left: 0px;
 }
-header nav ul{
-    flex-direction: column;
-    padding-left: 150px;
+
+footer {
+	grid-area: footer;
 }
+
+nav {
+	grid-area: nav;
+	display: inline-block;
+	vertical-align: middle;
+	margin-top: 8px;
+}
+
+nav > ul > li a,
+nav > ul > li {
+	color: rgb(53, 100, 153);
+	padding: 5px 15px;
+}
+
+header > nav > ul > li {
+	display: inline;
+}
+
+@media screen and (max-width: 500px) {
+	body {
+		grid-template-areas:
+			'header header'
+			'aside aside'
+			'main main'
+			'footer footer';
+	}
+	h1 {
+		display: block;
+		margin-bottom: 5px;
+	}
+
+	header {
+		grid-template-areas:
+			'title'
+			'nav';
+	}
+
+	header > nav > ul > li {
+		display: block;
+		margin-bottom: 10px;
+	}
 }
