--- a/CSharp-Web/CSharpWebFund-ExamPrep-Feb2024/Homies/Views/Event/Add.cshtml
+++ b/CSharp-Web/CSharpWebFund-ExamPrep-Feb2024/Homies/Views/Event/Add.cshtml
@@ -1,8 +1,8 @@
-﻿@{
+﻿@model EventFormViewModel
+@{
     ViewBag.Title = "Create a New Event";
 }
 
-@*
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
@@ -49,5 +49,6 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}*@
+}
 
+ 
