--- a/CSharp-Web/CSharpWebFund-ExamPrep-October2022/Watchlist/Views/Shared/_Layout.cshtml
+++ b/CSharp-Web/CSharpWebFund-ExamPrep-October2022/Watchlist/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Watchlist.Data.Models
+@using System.Security.Claims
+@inject SignInManager<User> SignInManager;
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -22,6 +27,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Add">Add To Watchlist</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Watched">Marked as Watched</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -36,7 +50,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Watchlist
+            &copy; @DateTime.Now.Year - Watchlist
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
