--- a/CSharp-Web/CSharpWebFund-ExamPrep-October2022/Watchlist/Views/Movies/Watched.cshtml
+++ b/CSharp-Web/CSharpWebFund-ExamPrep-October2022/Watchlist/Views/Movies/Watched.cshtml
@@ -6,7 +6,7 @@
 <hr />
 
 
-@*<div class="text-center row">
+<div class="text-center row">
     @foreach (var movie in Model)
     {
         <div class="card col-4" style="width: 20rem; ">
@@ -26,4 +26,3 @@
         </div>
     }
 </div>
-*@
